fix line height issue to relieve spacing issue around left float in about.html.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h2:hover {
 
 h4 {
   font-size: 50pt;
-  line-height: 1.28;
+  line-height: 1.35;
   text-align: justify;
   margin-right: 20px;
 }
